--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -4,7 +4,7 @@ $lightGreen: #b9e7e7;
   display: flex;
   justify-content: center;
   .container {
-    width: 1024px;
+    width: 100%;
 
     .link {
       text-decoration: none;
@@ -65,6 +65,8 @@ $lightGreen: #b9e7e7;
 
     .navbar {
       .container {
+        width: min(100% - 4rem);
+        margin-inline: auto;
         padding: 10px 0px;
         display: flex;
         align-items: center;
@@ -146,7 +148,7 @@ $lightGreen: #b9e7e7;
             position: relative;
 
             &::after {
-              content: "";
+              content: '';
               width: 100%;
               height: 100%;
               background-color: $lightGreen;
@@ -337,34 +339,34 @@ $lightGreen: #b9e7e7;
         .item {
           border: 1px solid lightgray;
           padding: 10px;
-          flex:1;
+          flex: 1;
           display: flex;
           flex-direction: column;
           justify-content: space-between;
           font-size: 12px;
           color: #555;
 
-          h1{
+          h1 {
             font-size: 20px;
           }
 
-          .file{
+          .file {
             text-decoration: underline;
             cursor: pointer;
           }
 
-          .buttons{
+          .buttons {
             display: flex;
             justify-content: space-between;
 
-            :first-child{
+            :first-child {
               cursor: pointer;
               color: teal;
               background-color: white;
               border: 1px solid teal;
               padding: 3px 5px;
             }
-            :last-child{
+            :last-child {
               cursor: pointer;
               color: white;
               background-color: teal;
@@ -373,7 +375,7 @@ $lightGreen: #b9e7e7;
             }
           }
 
-          .cat{
+          .cat {
             display: flex;
             align-items: center;
             gap: 2px;
